nowa funkcjonalnosc faktury

--- a/npkpir_23/src/java/messagesbundle/messages_cs.properties
+++ b/npkpir_23/src/java/messagesbundle/messages_cs.properties
@@ -220,6 +220,7 @@ bud\u017cet = bud\u017cet
 VAT = VAT
 rozrachunki = rozrachunki
 zmianafirmy = zmiana firmy
+slowniki=s\u0142owniki
 miesi\u0105c = miesi\u0105c
 pobierz = pobierz
 numerkolejny = lp.
